"Updated CSS and HTML files: added new styles, modified existing ones, and changed HTML structure in about, porfolio, and work sections."

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,7 +52,7 @@ body {
 }
 
 .home {
-  padding: 100px 50px;
+  padding: 100px 50px 0;
   font-family: "Poppins", sans-serif;
 }
 
@@ -64,8 +64,7 @@ body {
 
 .home__about::before {
   content: "---------------";
-  width: 50px;
-  height: 20px;
+
   text-decoration: line-through; /* Aplica subrayado al texto */
   text-decoration-color: var(
     --ligth-white-300
@@ -93,7 +92,9 @@ body {
   padding: 2px 2px 1px 1px;
   border-radius: var(--radius-4);
   font-size: var(--txt-24) !important;
+  transition: background-color 0.4s, color 0.4s;
 }
+
 .home__email > i:hover {
   background-color: var(--ligth-white-100);
   color: var(--dark-black-100);
@@ -248,6 +249,30 @@ body {
 
 /*about*/
 
+.about {
+  padding: 100px 50px 0;
+}
+
+.about__profile--title {
+  text-transform: uppercase;
+  font-size: var(--txt-17);
+  color: var(--ligth-white-300);
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.about__profile--title::before {
+  content: "---------------------";
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  text-decoration: line-through; /* Aplica subrayado al texto */
+  text-decoration-color: var(
+    --ligth-white-300
+  ); /* Hace invisible el subrayado */
+  padding-right: 5px;
+}
+
+/* ---- about icons---*/
 .about__page {
   padding-bottom: 4rem;
 }
@@ -305,6 +330,105 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem 1rem;
+}
+
+/*porfolio*/
+
+.porfolio {
+  padding: 100px 50px 0;
+}
+
+.porfolio__title {
+  text-transform: uppercase;
+  font-size: var(--txt-17);
+  color: var(--ligth-white-300);
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.porfolio__title::before {
+  content: "---------------------";
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  text-decoration: line-through; /* Aplica subrayado al texto */
+  text-decoration-color: var(
+    --ligth-white-300
+  ); /* Hace invisible el subrayado */
+  padding-right: 5px;
+}
+
+.porfolio__cards {
+  flex-wrap: wrap;
+}
+
+.pcccard {
+  max-width: 250px;
+  min-width: 250px;
+  max-height: 345px;
+  min-height: 345px;
+  background-color: var(--ligth-white-400);
+  border-radius: var(--radius-7);
+}
+.pcccard:hover > .pcccard__img > img {
+  transform: scale(1.2);
+  filter: none;
+}
+
+.pcccard__img {
+  width: 100%;
+  height: 161px;
+  overflow: hidden;
+}
+.pcccard__img > img {
+  transition: filter 0.6s, transform 0.6s;
+  filter: grayscale(1);
+}
+
+.pcccard__detail {
+  text-align: center;
+  gap: 10px;
+  color: var(--dark-black-600);
+  font-size: var(--txt-12);
+}
+
+.pcccard__detail > h4 {
+  color: var(--dark-black-100);
+  font-weight: bold;
+  font-size: var(--txt-22);
+}
+
+.work__imgContainer {
+  margin-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.work__imgContainer div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.work__subtitle {
+  color: var(--dark-black-600);
+}
+
+.work__imgContainer--icon {
+  width: 35px;
+  height: 35px;
+  transition: transform 0.4s;
+}
+
+.work__imgContainer--icon:hover {
+  transform: translateY(-0.5rem);
+}
+
+.pcccard__buttonLoad {
+  background-color: var(--ligth-white-400);
+  width: fit-content;
+  align-self: center;
 }
 
 /*footer*/
