--- a/css/variables.css
+++ b/css/variables.css
@@ -9,6 +9,7 @@
   --ligth-white-100: #ffffff;
   --ligth-white-200: #ffffff;
   --ligth-white-300: #d9d9d9;
+  --ligth-white-400: #fafafa;
 
   --ligth-grey-100: #c4c4c4;
   --ligth-grey-200: #e5e5e5;
