se agrego la seccion de tecnologia y su respectivo css

--- a/css/variables.css
+++ b/css/variables.css
@@ -10,6 +10,7 @@
   --ligth-white-200: #ffffff;
   --ligth-white-300: #d9d9d9;
   --ligth-white-400: #fafafa;
+  --ligth-white-500: #e2e2e2;
 
   --ligth-grey-100: #c4c4c4;
   --ligth-grey-200: #e5e5e5;
