--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,7 +22,7 @@ body {
 .header {
   width: 100%;
   /* justify-content: space-between; */
-  padding: 15px;
+  padding: 30px;
 }
 
 .header__nav {
@@ -31,7 +31,7 @@ body {
 }
 
 .header__nav--items {
-  gap: 15px;
+  gap: 25px;
 }
 
 .header__nav--items > li > a,
@@ -47,12 +47,14 @@ body {
 }
 
 /*home*/
-.main {
-  padding: 0 15px;
+.main > section > div {
+  /* padding: 0 15px; */
+  max-width: 1400px;
+  margin: auto;
 }
 
 .home {
-  padding: 100px 50px 0;
+  padding: 100px;
   font-family: "Poppins", sans-serif;
 }
 
@@ -63,29 +65,28 @@ body {
 }
 
 .home__about::before {
-  content: "---------------";
-
-  text-decoration: line-through; /* Aplica subrayado al texto */
-  text-decoration-color: var(
-    --ligth-white-300
-  ); /* Hace invisible el subrayado */
+  content: "-------------------";
+  text-decoration: line-through;
+  text-decoration-color: var(--ligth-white-300);
   padding-right: 5px;
 }
 
 .home__name {
   font-size: 80px;
   font-family: "Space Grotesk", sans-serif;
+  margin-top: 20px;
 }
 
 .home__aboutContainer {
   font-size: var(--txt-17);
-  gap: 7px;
-  margin-top: 15px;
+  gap: 20px;
+  margin-top: 40px;
 }
 
 .home__github,
 .home__linkedin {
   text-transform: capitalize;
+  width: fit-content;
 }
 
 .home__email > i {
@@ -250,102 +251,68 @@ body {
 /*about*/
 
 .about {
-  padding: 100px 50px 0;
+  padding: 100px;
+  background-color: var(--ligth-white-100);
+  color: var(--dark-black-600);
 }
 
 .about__profile--title {
   text-transform: uppercase;
-  font-size: var(--txt-26);
-  color: var(--ligth-white-300);
+  font-size: var(--txt-20);
+  color: var(--ligth-grey-600);
   font-family: "Poppins", sans-serif;
   font-weight: 400;
-  margin-bottom: 1.5rem;
+  margin-bottom: 5rem;
 }
 
 .about__profile--title::before {
-  content: "---------------------";
+  content: "----------------";
   font-weight: 400;
   font-family: "Roboto", sans-serif;
-  text-decoration: line-through; /* Aplica subrayado al texto */
-  text-decoration-color: var(
-    --ligth-white-300
-  ); /* Hace invisible el subrayado */
+  text-decoration: line-through;
   padding-right: 5px;
+  font-size: var(--txt-23);
+  text-decoration-color: var(--ligth-grey-600);
 }
 
-/* ---- about icons---*/
-.about__page {
-  padding-bottom: 4rem;
-}
-
-.about__perfil {
-  justify-self: center;
-}
-
-.about__content {
-  row-gap: 4rem;
-}
-
-.about__data {
-  row-gap: 2rem;
-}
-
-.about__info {
-  row-gap: 0.75rem;
-  text-align: center;
-}
-
-.about__name {
-  font-size: var(--h1-font-size);
-}
-
-.about__profession {
-  font-size: var(--h2-font-size);
-}
-
-.about__description b {
-  color: var(--first-color);
-}
-
-.about__button {
-  justify-self: center;
-}
-
-.about__skills-title {
-  font-size: var(--h3-font-size);
-  text-align: center;
-  margin: 1rem 0;
-}
-
-.about__skills-img {
-  width: 35px;
-  transition: transform 0.4s;
-}
-
-.about__skills-img:hover {
-  transform: translateY(-0.5rem);
-}
-
-.about__skills-content {
-  grid-template-columns: repeat(7, max-content);
+.about__profile--description {
+  /* justify-content: space-between; */
   justify-content: center;
+  gap: 200px;
   align-items: center;
-  gap: 2rem 1rem;
+}
+
+.about__profile--description > p {
+  max-width: 50%;
+  font-size: var(--txt-15);
+  color: var(--ligth-grey-700);
+}
+
+.about__profile--img {
+  width: 150px;
+  height: 200px;
+}
+.about__profile--img > img {
+  width: 150px;
+  height: 200px;
+  min-width: 150px;
+  object-fit: cover;
+  filter: grayscale(1);
 }
 
 /*porfolio*/
 
 .porfolio {
-  padding: 100px 50px 100px;
+  padding: 100px;
 }
 
 .porfolio__title {
   text-transform: uppercase;
-  font-size: var(--txt-26);
+  font-size: var(--txt-20);
   color: var(--ligth-white-300);
   font-family: "Poppins", sans-serif;
   font-weight: 400;
-  margin-bottom: 1.5rem;
+  margin-bottom: 5rem;
 }
 
 .porfolio__title::before {
@@ -357,6 +324,7 @@ body {
     --ligth-white-300
   ); /* Hace invisible el subrayado */
   padding-right: 5px;
+  font-size: var(--txt-23);
 }
 
 .porfolio__cards {
@@ -445,9 +413,118 @@ body {
   text-underline-offset: 5px;
 }
 
+/*technology*/
+
+.technology {
+  padding: 100px;
+  background-color: var(--ligth-white-100);
+  color: var(--dark-black-600);
+}
+
+.technology__title {
+  text-transform: uppercase;
+  font-size: var(--txt-20);
+  color: var(--ligth-grey-600);
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.technology__title::before {
+  content: "-----------";
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  text-decoration: line-through;
+  padding-right: 5px;
+  font-size: var(--txt-23);
+  text-decoration-color: var(--ligth-grey-600);
+}
+
+.technology__h3 {
+  font-size: var(--txt-35);
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 900;
+  margin-top: 5px;
+  margin-bottom: 5rem;
+}
+.technology__h3::first-letter {
+  text-transform: uppercase;
+}
+.about__page {
+  padding-bottom: 4rem;
+}
+
+.about__perfil {
+  justify-self: center;
+}
+
+.about__content {
+  row-gap: 4rem;
+}
+
+.about__data {
+  row-gap: 2rem;
+}
+
+.about__info {
+  row-gap: 0.75rem;
+  text-align: center;
+}
+
+.about__name {
+  font-size: var(--h1-font-size);
+}
+
+.about__profession {
+  font-size: var(--h2-font-size);
+}
+
+.about__description b {
+  color: var(--first-color);
+}
+
+.about__button {
+  justify-self: center;
+}
+
+.about__skills-title {
+  font-size: var(--h3-font-size);
+  text-align: center;
+  margin: 1rem 0;
+}
+
+.about__skills-img {
+  width: 40px;
+  min-width: 40px;
+  transition: transform 0.4s ease;
+  filter: grayscale(1);
+}
+
+.about__skills-img:hover {
+  transform: translateY(-0.5rem);
+  filter: grayscale(0);
+}
+
+.NetBeans {
+  transform: scale(1.5);
+}
+.NetBeans:hover {
+  transform: translateY(-0.5rem) scale(1.5);
+  filter: grayscale(0);
+}
+
+.about__skills-content {
+  /* grid-template-columns: repeat(7, max-content); */
+  justify-content: center;
+  align-items: center;
+}
+.about__skills-content > div {
+  border: 1px solid var(--ligth-white-500);
+  padding: 30px;
+}
+
 /*footer*/
 .footer {
-  background-color: var(--ligth-white-100);
+  background-color: var(--dark-black-600);
 }
 
 .footer__container {
@@ -462,7 +539,7 @@ body {
 
 .footer__content a,
 .footer__copy {
-  color: var(--dark-black-600);
+  color: var(--ligth-white-300);
 }
 
 .footer__links,
