--- a/css/estilos.css
+++ b/css/estilos.css
@@ -348,7 +348,7 @@ body {
 
 .porfolio__cards {
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: left;
 }
 
 .pcccard {
@@ -356,7 +356,7 @@ body {
   min-width: 240px;
   max-height: 335px;
   min-height: 335px;
-  margin: 30px 30px 0 0;
+  margin: 30px 30px 0;
   background-color: var(--dark-black-100);
   box-shadow: 7px 7px 25px 0px var(--box-shadow-white);
   border-radius: var(--radius-4);
@@ -370,7 +370,27 @@ body {
   width: 100%;
   height: 161px;
   overflow: hidden;
+  position: relative;
 }
+
+.work__icon {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: var(--txt-22);
+  color: var(--dark-black-100);
+  transition: transform 0.6s, scale 0.6s;
+  /* background-color: var(--ligth-white-100); */
+  /* border-radius: 50%; */
+  /* padding: 0 3px; */
+  /* border: 1px solid black; */
+}
+
+.pcccard__img:hover .work__icon {
+  transform: translate(0.5rem, -0.5rem) scale(1.2);
+  color: var(--notification-primary);
+}
+
 .pcccard__img > img {
   transition: filter 0.6s, transform 0.6s;
   filter: grayscale(1);
