--- a/css/estilos.css
+++ b/css/estilos.css
@@ -48,7 +48,7 @@ body {
 /*home*/
 
 body {
-  background-image: url("../images/234.jpg");
+  background-image: url("./../images/234.jpg");
   background-repeat: no-repeat;
   /* background-position: center; */
   background-size: 100vw 100vh;
