--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,10 @@ body {
   color: var(--ligth-white-100);
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
 .header {
   width: 100%;
   padding: 30px;
@@ -194,6 +198,14 @@ body {
 .pfd-view > iframe {
   width: 100%;
   height: 100%;
+}
+
+.close-button {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  font-size: var(--txt-50);
+  cursor: pointer;
 }
 
 /*about*/
