--- a/css/variables.css
+++ b/css/variables.css
@@ -5,6 +5,7 @@
   --dark-black-400: rgba(0, 0, 0, 0.712);
   --dark-black-500: #1b1b1b;
   --dark-black-600: #252525;
+  --dark-black-700: rgba(0, 0, 0, 0.596);
 
   --ligth-white-100: #ffffff;
   --ligth-white-200: #ffffff;
