"Added CSS styles for .pfd-view and modified JavaScript event listeners for menu button and close menu functionality."

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -711,6 +711,10 @@ body {
   .bg-header {
     padding: 30px;
   }
+
+  .pfd-view {
+    padding: 0 50px 0px 0;
+  }
 }
 
 @media (max-width: 800px) {
